# beep

./: .gitignore  .travis.yml  90-pcspkr-beep.rules  CHANGELOG  CREDITS  CREDITS.md  DEVELOPMENT.md  Doxyfile.in  GNUmakefile  GNUmakefile.in  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS.md  PACKAGING.md  PERMISSIONS.md  README  README.md  beep-compiler.h  beep-config.h.in  beep-driver-console.c  beep-driver-console.h  beep-driver-evdev.c  beep-driver-evdev.h  beep-driver-noop.c  beep-driver-noop.h  beep-driver.h  beep-drivers.c  beep-drivers.h  beep-library.c  beep-library.h  beep-log.c  beep-log.h  beep-main.c  beep-types.h  beep-usage.h  beep-usage.txt  beep-usage.txt.in  (+11 more)
.github/workflows/: beep-build.yml  c-cpp.yml
contrib/: failure-beeps  success-beeps
contrib/morse/: morse2beep.pl  morse2beep.sed
debian/: README.Debian  README.source  beep.1.diff  changelog  config  control  copyright  overrides  postinst  postrm  rules  templates  watch
m4/: sb-prog.m4  sb-summary.m4
tests/: 00-nothing.output.expected.0  00-nothing.sh  01-nothing.sh  02-second-device-name.expected.0  02-second-device-name.output.expected.0  02-second-device-name.sh  03-cmdline-unhandled-option.expected.0  03-cmdline-unhandled-option.sh  04-cmdline-unhandled-non-option.sh  05-cmdline-help.bash  05-cmdline-help.expected.0  05-cmdline-version.bash  05-cmdline-version.output.expected.0  10-beep-default.sh  11-beep-default-logs.expected.0  11-beep-default-logs.expected.1  11-beep-default-logs.sh  11-beep-f-880Hz.sh  20-beep-default.sh  20-beep-device-dev-evdev-pcspkr.sh  21-beep-device-dev-console.output.expected.0  21-beep-device-dev-console.sh  30-beep-device-dev-tty0.expected.0  30-beep-device-dev-tty0.output.expected.0  30-beep-device-dev-tty0.sh  31-beep-device-dev-tty4.expected.0  31-beep-device-dev-tty4.expected.3  31-beep-device-dev-tty4.output.expected.0  31-beep-device-dev-tty4.output.expected.2  31-beep-device-dev-tty4.sh  33-beep-device-dev-tty63.output.expected.0  33-beep-device-dev-tty63.sh  34-beep-device-dev-ttyXX.expected.0  34-beep-device-dev-ttyXX.output.expected.0  34-beep-device-dev-ttyXX.sh  35-beep-device-dev-tty99.output.expected.0  35-beep-device-dev-tty99.sh  36-beep-device-dev-ttyX.expected.0  36-beep-device-dev-ttyX.output.expected.0  36-beep-device-dev-ttyX.sh  (+23 more)
(+30 files in other folders)
